--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <link rel="icon" type="image/svg+xml" href="/tesla.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=5.0， viewport-fit=cover" />
+    <meta name="robots" content="noindex, nofollow">
+    <title>设计您的 Model 3 | Tesla</title>
   </head>
   <body>
     <div id="app"></div>
